// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> set as disabled matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "default",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "0.5",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "default",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className="y-button--content__hidden"
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
  <span
    className="y-button--spinner"
  >
    <Spinner
      color="light"
      hideText={true}
      isCentered={true}
      size="small"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with additional className matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button TEST_CLASSNAME"
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with aria label matches its snapshot 1`] = `
<BaseButton
  ariaLabel="Aria description"
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with button type matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with default options matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with fullWidth matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": "100%",
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with icon matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    <span
      className="y-button--icon-wrapper-left"
    >
      <Accounts />
    </span>
    Click Me
    <div
      className="y-button--secondary-text"
    >
      <span
        className="y-button--icon-wrapper-left"
      >
        <Accounts />
      </span>
    </div>
  </Block>
</BaseButton>
`;

exports[`<Button /> with icon on the right matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <span
      className="y-button--icon-wrapper-right"
    >
      <Accounts />
    </span>
    <div
      className="y-button--secondary-text"
    >
      <span
        className="y-button--icon-wrapper-right"
      >
        <Accounts />
      </span>
    </div>
  </Block>
</BaseButton>
`;

exports[`<Button /> with invalid href matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  href="#"
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type=""
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with primary color matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(56,108,187)",
        "borderColor": "rgb(56,108,187)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(255,255,255)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(47,92,159)",
        "borderColor": "rgb(47,92,159)",
        "color": "rgb(255,255,255)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(47,92,159)",
        "borderColor": "rgb(47,92,159)",
        "color": "rgb(255,255,255)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(38,79,140)",
        "borderColor": "rgb(38,79,140)",
        "color": "rgb(255,255,255)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with primary color set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(56,108,187)",
        "borderColor": "rgb(56,108,187)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(255,255,255)",
        "cursor": "default",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(47,92,159)",
        "borderColor": "rgb(47,92,159)",
        "color": "rgb(255,255,255)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(47,92,159)",
        "borderColor": "rgb(47,92,159)",
        "color": "rgb(255,255,255)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(38,79,140)",
        "borderColor": "rgb(38,79,140)",
        "color": "rgb(255,255,255)",
      },
    }
  }
  type="button"
>
  <Block
    className="y-button--content__hidden"
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
  <span
    className="y-button--spinner"
  >
    <Spinner
      color="dark"
      hideText={true}
      isCentered={true}
      size="small"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with reset type matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="reset"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with small size matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "4px 9px 6px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="small"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with small size set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={true}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "default",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "4px 9px 6px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className="y-button--content__hidden"
    textAlign="center"
    textSize="small"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
  <span
    className="y-button--spinner"
  >
    <Spinner
      color="light"
      hideText={true}
      isCentered={true}
      size="xSmall"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with small size with icon matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "4px 9px 6px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="button"
>
  <Block
    className=""
    textAlign="center"
    textSize="small"
  >
    <span
      className="y-button--icon-wrapper-left"
    >
      <Accounts />
    </span>
    Click Me
    <div
      className="y-button--secondary-text"
    >
      <span
        className="y-button--icon-wrapper-left"
      >
        <Accounts />
      </span>
    </div>
  </Block>
</BaseButton>
`;

exports[`<Button /> with submit type matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type="submit"
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;

exports[`<Button /> with valid href matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button "
  disabled={false}
  href="https://www.yammer.com"
  split={false}
  styles={
    Object {
      "root": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(221,224,230)",
        "borderRadius": "2px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "boxShadow": "0 1px 1px 0 rgba(0, 0, 0, 0.05)",
        "color": "rgb(56,108,187)",
        "cursor": "pointer",
        "display": "inline-block",
        "fontWeight": "600",
        "opacity": "1",
        "padding": "7px 15px",
        "position": "relative",
        "textAlign": "center",
        "transition": "all 0.05s ease-out",
        "whiteSpace": "nowrap",
        "width": undefined,
      },
      "rootFocused": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
      },
      "rootHovered": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(154,195,255)",
        "color": "rgb(56,108,187)",
        "textDecoration": "none",
      },
      "rootPressed": Object {
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(108,152,217)",
        "color": "rgb(56,108,187)",
      },
    }
  }
  type=""
>
  <Block
    className=""
    textAlign="center"
    textSize="mediumSub"
  >
    Click Me
    <div
      className="y-button--secondary-text"
    />
  </Block>
</BaseButton>
`;
